# aws-s3-file-upload-rust-axum

./: .env.example  Cargo.toml  README.md
src/: main.rs
