[package]
name = "rust-axum-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.32.0"
axum = { version = "0.7.5", features = ["multipart"] }
dotenvy = "0.15.7"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["limit"] }
uuid = { version = "1.8.0", features = ["v4"] }
